Fixed alignment

--- a/client/src/css/VisualiseTuning.css
+++ b/client/src/css/VisualiseTuning.css
@@ -15,13 +15,12 @@ svg {
     align-items: center;
   }
   .row_visualisation{
-      flex:0.2
+      
   }
   .col_visualisation{
     flex-direction: column;
 }
 
   svg{
-    flex: 0.6 
   }
   
